<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Commit 2 ? -->
    <!-- Name of movie -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_name"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movie_hint"
            android:id="@+id/movie_name"
    />

    <!-- Description of movie -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:id="@+id/movie_description"
    />

    <!-- Language checkbox -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:id="@+id/language"
    />
    <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
    >
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="English"
                android:id="@+id/default_radio"
        />
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chinese"
                android:id="@+id/radioChinese"

        />
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Malay"
                android:id="@+id/radioMalay"
        />
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tamil"
                android:id="@+id/radioTamil"
        />
    </RadioGroup>

    <!-- Release Date -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_date"

    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/release_date_enter"
            android:inputType="date"
            android:id="@+id/release_date"
    />

    <!-- Checkbox -->
    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chkbx1"
            android:onClick="chkbx_show"
            android:id="@+id/chkbx1"
    />
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
    >
        <CheckBox
                android:id="@+id/chkbx2"
                android:layout_weight="0.75"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="match_parent"
                android:text="@string/chkbx2"
                android:visibility="invisible"
        />
        <CheckBox
                android:id="@+id/chkbx3"
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="match_parent"
                android:text="@string/chkbx3"
                android:visibility="invisible"
        />
    </LinearLayout>

    <!-- Button -->
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_movie"
                android:layout_gravity="center"
                android:id="@+id/button"

        />
    </LinearLayout>

     <!--View movie button -->
    <!--<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">-->
        <!--<Button-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="View Movie Details"-->
                <!--android:id="@+id/view_movie_btn"-->
                <!--android:onClick="openActivityViewMovie"-->
        <!--/>-->
    <!--</LinearLayout>-->

</LinearLayout>